--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,1 +1,14 @@
-<h1> {{title}} </h1>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        {% if title %}
+        <title> {{ title }}</title>
+        {% else %}
+        <title> Welcome to The best NEWS HIGHLIGHT Website online </title>
+        {% endif %}
+    </head>
+    <body>
+
+    </body>
+</html>
