added an error file and created the function that redirects the user to the error page - imported the error file in the main init file

--- a/app/templates/newsatnine.html
+++ b/app/templates/newsatnine.html
@@ -23,7 +23,7 @@
                     <span class="text-muted date-author">{{article.publishedAt}}</span>
                 </p>
                 <p> {{article.description}}...
-                    <a href={{article.url}} target="_blank"><button type="button" class="btn btn-outline-primary">Click here for more news</button></a>
+                    <a href={{article.url}} target="_blank"><button type="button" class="btn btn-outline-primary">Go to site</button></a>
                 </p>
                 <hr>
             </div>
