--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,13 +1,13 @@
-{% macro displayNewsList(category) %}
+{% macro displayNewsList(source_list) %}
 
-    {% for item in category %}
+    {% for item in source_list %}
         <li>{{ item.title}}</li>
         <div class="card border-primary md-3 col-md-3">
             <div class="card-header">{{item.name}}</div>
             <div class="card-body">
                 <p class="card-text">{{item.description|truncate(150)}}
                     <br>
-                    <a href="/newsatnine/{{category.id}}&40"><button type="button" class="btn btn-primary btn-sm">Read Articles</button></a></p>
+                    <a href="/newsatnine/{{source_list.id}}&40"><button type="button" class="btn btn-primary btn-sm">Read Articles</button></a></p>
             </div>
         </div>
     
