--- a/app/templates/error.html
+++ b/app/templates/error.html
@@ -1,5 +1,5 @@
 {% extends 'base.html'%}
 
 {% block content %}
-    <h1>The page you're looking for doesn't exist, kindly stop being a bi**h and type in the correct url</h1>
+    <h1>THE PAGE YOU ARE LOOKING FOR DOES NOT EXIST</h1>
 {% endblock %}
