--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -7,11 +7,12 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/"> News Highlight </a>
+            <a class="navbar-brand" href="/"> Home </a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="/">Home</a></li>
+                <li><a href="/newsatnine/crypto-coins-news">News</a></li>
+
         </div>
 
     </div>
