--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -6,7 +6,7 @@
             <div class="card-header">{{item.name}}</div>
             <div class="card-body">
                     <br>
-                    <a href="/newsatnine/{{item.id}}"><button type="button" class="btn btn-primary btn-sm">Read Articles</button></a></p>
+                    <a href="/newsatnine/{{item.id}}"><button type="button" class="btn btn-default">Read Articles</button></a></p>
             </div>
         </div>
     
