--- a/app/templates/newsatnine.html
+++ b/app/templates/newsatnine.html
@@ -1,5 +1,16 @@
 {% extends 'base.html' %} 
 
+<!-- Navbar block  --> 
+{% block navbar %}
+    {% include 'navbar.html' %}
+{% endblock %}
+
+{% block styles%}
+    {{ super() }}
+    <link rel="stylesheet" href="{{url_for('static',filename='css/newsatnine.css')}}">
+{% endblock %}
+
+
 {% block content %}
 <div class="container-fluid">
     <div class="row">
